# paperwriter

./: CLAUDE.md  README.md  devplan.md
paperwriter-backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt  run.py
paperwriter-backend/app/: config.py  main.py
paperwriter-backend/app/api/v1/: ai.py  files.py  health.py  project.py  websocket.py
paperwriter-backend/app/core/: ai_service.py  file_service.py  project_service.py
paperwriter-backend/app/models/: ai.py  file.py  project.py
paperwriter-backend/app/utils/: ai_utils.py
paperwriter-frontend/: README.md  index.html  package.json  tailwind.config.js
paperwriter-frontend/src/: App.tsx  main.tsx
paperwriter-frontend/src/components/ai/: AIPanel.tsx  ContextAwareActions.tsx
paperwriter-frontend/src/components/editor/: PaperEditor.tsx  cmExtensions.ts
paperwriter-frontend/src/components/files/: FileActionModal.tsx
paperwriter-frontend/src/components/layout/: AIPanel.tsx  EditorPanel.tsx  EditorTabs.tsx  Header.tsx  Sidebar.tsx
paperwriter-frontend/src/hooks/: useWebSocket.ts
paperwriter-frontend/src/pages/: EditorPage.tsx  ProjectSelectorPage.tsx
paperwriter-frontend/src/services/: aiService.ts  api.ts  fileService.ts  projectService.ts
paperwriter-frontend/src/store/: appStore.ts
paperwriter-frontend/src/styles/: editor.css  globals.css
paperwriter-frontend/src/types/: ai.ts  file.ts  index.ts  project.ts  store.ts
